fixtures/fail/naming-and-readme/unsafe.php
<?php

function naming_and_readme_unsafe_include() {
	return 'missing guard';
}
